[gd_scene load_steps=9 format=3 uid="uid://cvh0fwg53wpus"]

[ext_resource type="Script" path="res://car_base.gd" id="1_cd5ts"]
[ext_resource type="Texture2D" uid="uid://c1f70054pofjm" path="res://assets/texture_09.png" id="1_rqohb"]
[ext_resource type="PackedScene" uid="uid://bxbjbeqrtwefe" path="res://smoke.tscn" id="4_8iv1s"]
[ext_resource type="PackedScene" uid="uid://cdm1o26gdxjcs" path="res://explosion.tscn" id="5_vekap"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_dtpcx"]
friction = 2.0
bounce = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_ywja5"]
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vviip"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.643137)
albedo_texture = ExtResource("1_rqohb")
uv1_scale = Vector3(6, 3, 1)

[sub_resource type="SphereMesh" id="SphereMesh_00jmq"]
material = SubResource("StandardMaterial3D_vviip")
radius = 1.0
height = 2.0

[node name="Car" type="RigidBody3D" groups=["cars"]]
collision_layer = 2
mass = 1.5
physics_material_override = SubResource("PhysicsMaterial_dtpcx")
gravity_scale = 3.0
angular_damp = 10.0
script = ExtResource("1_cd5ts")
acceleration = 80.0
turn_speed = 5.0
turn_stop_limit = 4.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ywja5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
visible = false
mesh = SubResource("SphereMesh_00jmq")

[node name="CarMesh" type="Node3D" parent="."]

[node name="GroundRay" type="RayCast3D" parent="CarMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.5, 2.08165e-12)

[node name="SmokeL" parent="CarMesh" instance=ExtResource("4_8iv1s")]
emitting = false

[node name="SmokeR" parent="CarMesh" instance=ExtResource("4_8iv1s")]
emitting = false

[node name="Explosion" parent="." instance=ExtResource("5_vekap")]
top_level = true
